2012-04-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h: Added CFURLAccess.h
	* Source/CFURL.c: Implement file system representation functions.
	* Source/CFURLAccess.c: Implemented file/directory operations.
	* Tests/CFURLAccess:
	* Tests/CFURLAccess/TestInfo:
	* Tests/CFURLAccess/basic.m: Add basic CFURLAccess tests.
	* Tests/CFArray/create.m: Addition CFArray test.
	* Source/CFRuntime.c: Initialize CFBinaryHeap.

2012-04-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFBinaryHeap.h:
	* Source/CFBinaryHeap.c: Implemented CFBinaryHeap.
	* Tests/CFBinaryHeap: Added tests.

2012-04-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFURLAccess.h:
	* Source/CFURLAccess.c:
	* Source/common.mk: Add CFURLAccess skeleton.

2012-04-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFStringFormat.c:
	* Source/GSPrivate.h: Use ASCII characters directly instead of their 
	numberical value.

2012-04-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Fix bug in CFURL string percent unescaping.
	* Tests/CFURL/escaping.m: Added more tests.

2012-04-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Fix bug in CFArrayGetFirstIndexOfValue().
	* Tests/CFArray/create.m:
	* Tests/CFArray/mutablearray.m: Add tests.

2012-04-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Add code to search transition times.
	* Source/GSPrivate.h: Declare GSBSearch() to perform bsearches 
	on C arrays.
	* Source/common.mk:
	* Source/GSFunctions.c: New file for functions that work on C types.
	* Tests/CFTimeZone/create.m: Move from here...
	* Tests/CFTimeZone/basic.m: ...to here and new tests.

2012-04-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Start implementing CFTimeZone.
	* Tests/CFTimeZone/create.c: Added very basic tests.

2012-02-18 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Fixes to CFURLStringParse() and